# cportlib

./: .gitignore  README.md  completion_port.hpp  completion_status.hpp  config.hpp  placeholders.hpp  task_channel.hpp  task_channel_group.hpp  task_scheduler.hpp  task_t.hpp
cport/: completion_handler_wrapper.hpp  completion_port.hpp  completion_status.hpp  config.hpp  error_types.hpp  placeholders.hpp  task_channel.hpp  task_channel.hpp~  task_channel_group.hpp  task_channel_group.hpp~  task_scheduler.hpp  task_t.hpp  task_t.hpp~
cport/detail/: completion_handler.hpp  completion_handler.hpp~  completion_handler_base.hpp  completion_handler_base.hpp~  completion_port_impl.hpp  completion_port_impl.hpp~  destroyable_obj.hpp  impl_accessor.hpp  null_handler_t.hpp  obj_mem_pool.hpp  (+9 more)
detail/: completion_handler.hpp  completion_handler_base.hpp  completion_port_impl.hpp  event.hpp  null_handler_t.hpp  obj_mem_pool.hpp  operation_id.hpp  protected_t.hpp  task_handler.hpp  task_handler_base.hpp  task_scheduler_impl.hpp
docs/: Doxyfile
examples/: async_call_example.cpp  async_call_example2.cpp  cancel_task_example.cpp  task_wait_example.cpp  task_wait_example.cpp~  worker_context_example.cpp
impl/: completion_port.inl  completion_port.ipp  task_channel.inl  task_channel.ipp  task_channel_group.inl  task_scheduler.inl  task_scheduler.ipp
tests/: CMakeLists.txt  completion_handler_wrapper_ut.cpp  completion_port_ut.cpp  dispatch_vs_post.cpp  event_ut.cpp  perf_test.cpp  task_channel_ut.cpp  task_scheduler_ut.cpp  test_cancel.cpp
util/: event.hpp  thread_group.hpp
(+174 files in other folders)
